--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
     </form>
 
     <h4>Stock Actual</h4>
-    <table class="table table-bordered">
+    <thead><tr><th>ID</th><th>Tipo</th><th>Medida</th><th>Material</th><th>Cantidad</th><th>Usuario</th><th>Ubicación</th><th>Acciones</th></tr></thead>
         <thead><tr><th>ID</th><th>Tipo</th><th>Medida</th><th>Material</th><th>Cantidad</th><th>Usuario</th><th>Acciones</th></tr></thead>
         <tbody>
             {% for item in stock %}
@@ -36,7 +36,18 @@
                 <td>{{ item[3] }}</td>
                 <td>{{ item[4] }}</td>
                 <td>{{ item[5] }}</td>
-                <td>
+       <td>
+  {% if item[6] == 1 %}
+    BYG
+  {% elif item[6] == 2 %}
+    LA ECONÓMICA
+  {% elif item[6] == 3 %}
+    GALPÓN
+  {% else %}
+    -
+  {% endif %}
+</td>      
+ <td>
                     <a class="btn btn-sm btn-success" href="/sumar/{{ item[0] }}">+</a>
                     <a class="btn btn-sm btn-danger" href="/restar/{{ item[0] }}">-</a>
                 </td>
