--- a/dashboard.html
+++ b/dashboard.html
@@ -1,72 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stock de Aberturas</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <title>Stock de Aberturas</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="p-4">
-    <h1>Stock de Aberturas</h1>
 
-    <form method="post" action="/dashboard" class="mb-3">
-        <label for="ubicacion" class="form-label">Filtrar por ubicación:</label>
-        <select name="ubicacion" id="ubicacion" class="form-select" style="max-width: 300px;">
-            <option value="">Todas</option>
-            <option value="1">BYG</option>
-            <option value="2">LA ECONÓMICA</option>
-            <option value="3">GALPÓN</option>
-        </select>
-        <button type="submit" class="btn btn-primary mt-2">Filtrar</button>
-    </form>
-{% if ubicacion_actual %}
-<p><strong>Mostrando stock de:</strong>
-    {% if ubicacion_actual == '1' %} BYG
-    {% elif ubicacion_actual == '2' %} LA ECONÓMICA
-    {% elif ubicacion_actual == '3' %} GALPÓN
-    {% else %} Todas las ubicaciones
+  <h1>Stock de Aberturas</h1>
+
+  <form method="post" action="/dashboard" class="mb-3">
+    <label for="ubicacion" class="form-label">Filtrar por ubicación:</label>
+    <select name="ubicacion" id="ubicacion" class="form-select" style="max-width: 300px;">
+      <option value="" {% if not ubicacion_actual %}selected{% endif %}>Todas</option>
+      <option value="BYG" {% if ubicacion_actual == 'BYG' %}selected{% endif %}>BYG</option>
+      <option value="LA ECONÓMICA" {% if ubicacion_actual == 'LA ECONÓMICA' %}selected{% endif %}>LA ECONÓMICA</option>
+      <option value="GALPÓN" {% if ubicacion_actual == 'GALPÓN' %}selected{% endif %}>GALPÓN</option>
+    </select>
+    <button type="submit" class="btn btn-primary mt-2">Filtrar</button>
+  </form>
+
+  {% if ubicacion_actual %}
+    <p><strong>Mostrando stock de:</strong>
+    {% if ubicacion_actual == 'BYG' %} BYG
+    {% elif ubicacion_actual == 'LA ECONÓMICA' %} LA ECONÓMICA
+    {% elif ubicacion_actual == 'GALPÓN' %} GALPÓN
     {% endif %}
-</p>
-{% endif %}
-{% endif %}
-    <table class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Tipo</th>
-                <th>Medidas</th>
-                <th>Color</th>
-                <th>Marca</th>
-                <th>Cantidad</th>
-                <th>Ubicación</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for item in stock %}
-            <tr>
-                <td>{{ item[0] }}</td>
-                <td>{{ item[1] }}</td>
-                <td>{{ item[2] }}</td>
-                <td>{{ item[3] }}</td>
-                <td>{{ item[4] }}</td>
-                <td>{{ item[5] }}</td>
-                <td>
-                    {% if item[6] == 1 %}
-                        BYG
-                    {% elif item[6] == 2 %}
-                        LA ECONÓMICA
-                    {% elif item[6] == 3 %}
-                        GALPÓN
-                    {% else %}
-                        -
-                    {% endif %}
-                </td>
-                <td>
-                    <a class="btn btn-sm btn-success" href="/sumar/{{ item[0] }}">+</a>
-                    <a class="btn btn-sm btn-danger" href="/restar/{{ item[0] }}">-</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    </p>
+  {% endif %}
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Tipo</th>
+        <th>Medida</th>
+        <th>Material</th>
+        <th>Cantidad</th>
+        <th>Ubicación</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for item in stock %}
+        <tr>
+          <td>{{ item[1] }}</td>
+          <td>{{ item[2] }}</td>
+          <td>{{ item[3] }}</td>
+          <td>{{ item[4] }}</td>
+          <td>{{ item[5] }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
 </body>
 </html>
