--- a/dashboard.html
+++ b/dashboard.html
@@ -1,58 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Stock de Aberturas</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Dashboard - Stock de Aberturas</title>
 </head>
-<body class="p-4">
-    <h1>Stock de Aberturas</h1>
+<body>
+    <h1>Bienvenido, {{ user }}</h1>
 
-    <form method="post" action="/dashboard" class="mb-3">
-        <label for="ubicacion" class="form-label">Filtrar por ubicación:</label>
-        <select name="ubicacion" id="ubicacion" class="form-select" style="max-width: 300px;">
-            <option value="">Todas</option>
-            <option value="1" {% if ubicacion_actual == '1' %}selected{% endif %}>BYG</option>
-            <option value="2" {% if ubicacion_actual == '2' %}selected{% endif %}>LA ECONÓMICA</option>
-            <option value="3" {% if ubicacion_actual == '3' %}selected{% endif %}>GALPÓN</option>
+    <form method="post" action="{{ url_for('dashboard') }}">
+        <label for="ubicacion">Seleccionar ubicación:</label>
+        <select name="ubicacion" id="ubicacion">
+            <option value="">-- Todas las ubicaciones --</option>
+            <option value="BYG" {% if ubicacion_actual == 'BYG' %}selected{% endif %}>BYG</option>
+            <option value="LA ECONÓMICA" {% if ubicacion_actual == 'LA ECONÓMICA' %}selected{% endif %}>LA ECONÓMICA</option>
+            <option value="GALPÓN" {% if ubicacion_actual == 'GALPÓN' %}selected{% endif %}>GALPÓN</option>
         </select>
-        <button type="submit" class="btn btn-primary mt-2">Filtrar</button>
+        <button type="submit">Filtrar</button>
     </form>
 
-    {% if ubicacion_actual %}
-        <p><strong>Mostrando stock de:
-            {% if ubicacion_actual == '1' %}BYG
-            {% elif ubicacion_actual == '2' %}LA ECONÓMICA
-            {% elif ubicacion_actual == '3' %}GALPÓN
-            {% else %}Todas
-            {% endif %}
-        </strong></p>
-    {% endif %}
+    <h2>Stock {% if ubicacion_actual %}en {{ ubicacion_actual }}{% else %}Total{% endif %}</h2>
 
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Tipo</th>
-                <th>Medida</th>
-                <th>Cantidad</th>
-                <th>Ubicación</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for item in stock %}
-            <tr>
-                <td>{{ item[1] }}</td>
-                <td>{{ item[2] }}</td>
-                <td>{{ item[3] }}</td>
-                <td>
-                    {% if item[4] == '1' %}BYG
-                    {% elif item[4] == '2' %}LA ECONÓMICA
-                    {% elif item[4] == '3' %}GALPÓN
-                    {% else %}Sin especificar
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
+    <table border="1">
+        <tr>
+            <th>ID</th>
+            <th>Producto</th>
+            <th>Cantidad</th>
+            <th>Ubicación</th>
+        </tr>
+        {% for item in stock %}
+        <tr>
+            <td>{{ item[0] }}</td>
+            <td>{{ item[1] }}</td>
+            <td>{{ item[2] }}</td>
+            <td>{{ item[3] }}</td>
+        </tr>
+        {% endfor %}
     </table>
+
+    <a href="{{ url_for('agregar') }}">Agregar nuevo producto</a>
 </body>
 </html>
